# tinyslurpy

./: README.md  pyproject.toml
plum/: __main__.py
tinyslurpy/: __main__.py
